# soon-spl-token

./: .gitignore  Cargo.toml  README.md
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: soon_spl_token.rs  token_tests.rs
